--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
             </h3>
             <!-- Text -->
             <p class="text-muted mb-6 mb-md-0">
-              Created with SwiftUI for maximun visual performance on both your iPhone and iPad
+              Created with SwiftUI for maximum visual performance on both your iPhone and iPad
             </p>
           </div>
           <div class="col-12 col-md-4 text-center" data-aos="fade-up" data-aos-delay="50">
@@ -93,7 +93,7 @@
             </h3>
             <!-- Text -->
             <p class="text-muted mb-6 mb-md-0">
-              Not a 2000's app, it uses's your iCloud credentials, so no more forgot password or login
+              Not a 2000's app, it uses your iCloud credentials, no more forgotten passwords or logins
             </p>
           </div>
           <div class="col-12 col-md-4 text-center" data-aos="fade-up" data-aos-delay="100">
@@ -151,7 +151,7 @@
             </h3>
             <!-- Text -->
             <p class="text-muted mb-0">
-              If you need huge fonts or smallones the app will adap to it
+              If you need huge fonts or small it supports & adapt
             </p>
           </div>
         </div> <!-- / .row -->
@@ -448,7 +448,7 @@
 
                 <!-- Text -->
                 <p class="text-muted mb-6">
-                  Built in all new SwiftUI for maximun UI/UX performance
+                  Built in all new SwiftUI for maximum UI/UX performance
                 </p>
 
               </div>
@@ -592,7 +592,7 @@
 
             <!-- Text -->
             <p class="font-size-lg text-gray-700 mb-6">
-              You have a business to run. Stop waisting precious time in meetings that goes nowhere and increase unproductivity across your team.
+              You have a business to run. Stop waisting precious time in meetings that goes nowhere and increase productivity across your team.
             </p>
 
             <!-- Stats -->
@@ -825,7 +825,7 @@
 
                 <!-- Text -->
                 <p class="text-muted mb-6 mb-md-8">
-                  Absolutely. All of your data is been managaed by Apple and iCloud using your own credentials, we have no access to your data, only yo can do so
+                  Absolutely. All of your data is being managed by Apple and iCloud using your own credentials, we have no access to your data, only yo can do so
                 </p>
 
               </div>
@@ -871,7 +871,7 @@
 
                 <!-- Heading -->
                 <h4 class="text-white">
-                  What happens if i cancel my subscription?
+                  What happens if I cancel my subscription?
                 </h4>
 
                 <!-- Text -->
