Added Dynamite Apps in the footer

--- a/src/.tmp/service.html
+++ b/src/.tmp/service.html
@@ -998,6 +998,15 @@
           </div>
 
         </div> <!-- / .row -->
+
+        <div class="row">
+          <div class="col-12 text-center">
+            <p class="text-gray-700" style="align:center">
+              Created by Dynamite Apps LLC
+            </p>
+          </div>
+        </div>
+
       </div> <!-- / .container -->
     </footer>
 
