--- a/src/.tmp/index.html
+++ b/src/.tmp/index.html
@@ -157,7 +157,7 @@
             </h3>
             <!-- Text -->
             <p class="text-muted mb-6 mb-md-0">
-              Created with SwiftUI for maximun visual performance on both your iPhone and iPad
+              Created with SwiftUI for maximum visual performance on both your iPhone and iPad
             </p>
           </div>
           <div class="col-12 col-md-4 text-center" data-aos="fade-up" data-aos-delay="50">
@@ -181,7 +181,7 @@
             </h3>
             <!-- Text -->
             <p class="text-muted mb-6 mb-md-0">
-              Not a 2000's app, it uses's your iCloud credentials, so no more forgot password or login
+              Not a 2000's app, it uses your iCloud credentials, no more forgotten passwords or logins
             </p>
           </div>
           <div class="col-12 col-md-4 text-center" data-aos="fade-up" data-aos-delay="100">
@@ -277,7 +277,7 @@
             </h3>
             <!-- Text -->
             <p class="text-muted mb-0">
-              If you need huge fonts or smallones the app will adap to it
+              If you need huge fonts or small it supports & adapt
             </p>
           </div>
         </div> <!-- / .row -->
@@ -652,7 +652,7 @@
 
                 <!-- Text -->
                 <p class="text-muted mb-6">
-                  Built in all new SwiftUI for maximun UI/UX performance
+                  Built in all new SwiftUI for maximum UI/UX performance
                 </p>
 
               </div>
@@ -820,7 +820,7 @@
 
             <!-- Text -->
             <p class="font-size-lg text-gray-700 mb-6">
-              You have a business to run. Stop waisting precious time in meetings that goes nowhere and increase unproductivity across your team.
+              You have a business to run. Stop waisting precious time in meetings that goes nowhere and increase productivity across your team.
             </p>
 
             <!-- Stats -->
@@ -1056,7 +1056,7 @@
 
                 <!-- Text -->
                 <p class="text-muted mb-6 mb-md-8">
-                  Absolutely. All of your data is been managaed by Apple and iCloud using your own credentials, we have no access to your data, only yo can do so
+                  Absolutely. All of your data is being managed by Apple and iCloud using your own credentials, we have no access to your data, only yo can do so
                 </p>
 
               </div>
@@ -1102,7 +1102,7 @@
 
                 <!-- Heading -->
                 <h4 class="text-white">
-                  What happens if i cancel my subscription?
+                  What happens if I cancel my subscription?
                 </h4>
 
                 <!-- Text -->
@@ -1349,6 +1349,15 @@
           </div>
 
         </div> <!-- / .row -->
+
+        <div class="row">
+          <div class="col-12 text-center">
+            <p class="text-gray-700" style="align:center">
+              Created by Dynamite Apps LLC
+            </p>
+          </div>
+        </div>
+
       </div> <!-- / .container -->
     </footer>
 
