--- a/src/.tmp/index.html
+++ b/src/.tmp/index.html
@@ -131,6 +131,16 @@
       </div> <!-- / .container -->
     </section>
 
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-md-12 col-xs-12 text-center" data-aos="fade-up" style="padding-top:25px">
+            <a href="https://www.producthunt.com/posts/minutes-app?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-minutes-app" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=178260&theme=light" alt="Minutes App - Take back control of your meetings with Minutes App | Product Hunt Embed" style="width: 250px; height: 54px;" width="250px" height="54px" /></a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- FEATURES
     ================================================== -->
     <section class="py-8 py-md-11">
@@ -1173,6 +1183,9 @@
             </a>
 
           </div>
+          <div class="col-12 col-md-12 col-xs-12 text-center" data-aos="fade-up" style="padding-top:25px">
+           <a href="https://www.producthunt.com/posts/minutes-app?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-minutes-app" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=178260&theme=light" alt="Minutes App - Take back control of your meetings with Minutes App | Product Hunt Embed" style="width: 250px; height: 54px;" width="250px" height="54px" /></a>
+          </div>
         </div> <!-- / .row -->
       </div> <!-- / .container -->
     </section>
@@ -1242,6 +1255,11 @@
                   <img src="./assets/img/Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917_web.svg">
                 </a>
               </li>
+              <!-- <li class="mb-3">
+              <a href="https://www.producthunt.com/posts/minutes-app?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-minutes-app" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=178260&theme=light" alt="Minutes App - Take back control of your meetings with Minutes App | Product Hunt Embed" style="width: 150px; height: 54px;" width="150px" height="54px" /></a>
+              </li> -->
+
+
             </ul>
 
           </div>
@@ -1254,23 +1272,23 @@
 
             <!-- List -->
             <ul class="list-unstyled text-muted mb-6 mb-md-8 mb-lg-0">
-              <li class="mb-3">
+              <!-- <li class="mb-3">
                 <a href="#!" class="text-reset">
                   Medium
                 </a>
-              </li>
+              </li> -->
               <li class="mb-3">
-                <a href="#!" class="text-reset">
-                  Indie Hackers
+                <a href="https://www.sideprojectors.com/project/14189/minutes-app" class="text-reset">
+                  Side Projectors
                 </a>
               </li>
               <li class="mb-3">
-                <a href="#!" class="text-reset">
+                <a href="https://www.producthunt.com/posts/minutes-app?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-minutes-app" class="text-reset">
                   Product Hunt
                 </a>
               </li>
               <li class="mb-3">
-                <a href="#!" class="text-reset">
+                <a href="https://sideprojects.net/posts/vAgvRjNFgEhDcHEoF/take-back-control-of-your-meetings-with-minutes-app" class="text-reset">
                   Side Projects
                 </a>
               </li>
