--- a/src/index.html
+++ b/src/index.html
@@ -63,6 +63,16 @@
       </div> <!-- / .container -->
     </section>
 
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-md-12 col-xs-12 text-center" data-aos="fade-up" style="padding-top:25px">
+            <a href="https://www.producthunt.com/posts/minutes-app?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-minutes-app" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=178260&theme=light" alt="Minutes App - Take back control of your meetings with Minutes App | Product Hunt Embed" style="width: 250px; height: 54px;" width="250px" height="54px" /></a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- FEATURES
     ================================================== -->
     <section class="py-8 py-md-11">
@@ -941,6 +951,9 @@
               <!-- Get it now <i class="fe fe-arrow-right"></i> -->
             </a>
 
+          </div>
+          <div class="col-12 col-md-12 col-xs-12 text-center" data-aos="fade-up" style="padding-top:25px">
+           <a href="https://www.producthunt.com/posts/minutes-app?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-minutes-app" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=178260&theme=light" alt="Minutes App - Take back control of your meetings with Minutes App | Product Hunt Embed" style="width: 250px; height: 54px;" width="250px" height="54px" /></a>
           </div>
         </div> <!-- / .row -->
       </div> <!-- / .container -->
