Fixed typo mentioned by @mopepsupreme

--- a/src/index.html
+++ b/src/index.html
@@ -835,7 +835,7 @@
 
                 <!-- Text -->
                 <p class="text-muted mb-6 mb-md-8">
-                  Absolutely. All of your data is being managed by Apple and iCloud using your own credentials, we have no access to your data, only yo can do so
+                  Absolutely. All of your data is being managed by Apple and iCloud using your own credentials, we have no access to your data, only you can do so
                 </p>
 
               </div>
