Added new Terms of Use to the website

--- a/src/.tmp/minutes-privacy-policy.html
+++ b/src/.tmp/minutes-privacy-policy.html
@@ -39,7 +39,7 @@
     <link rel="stylesheet" href="./assets/css/theme.css">
     <!-- endbuild -->
 
-    <!-- <title>Landkit</title> -->
+    <!-- <title>Privacy Policy</title> -->
     <title>Minutes App</title>
 
   </head>
@@ -85,6 +85,12 @@
             <li class="nav-item">
               <a class="nav-link" href="minutes-privacy-policy.html" id="navbarLandings" aria-haspopup="true" aria-expanded="false">
                 Privacy Policy
+              </a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="minutes-terms-of-service.html" id="navbarLandings" aria-haspopup="true" aria-expanded="false">
+                Terms of Usage
               </a>
             </li>
             <li class="nav-item dropdown">
@@ -139,12 +145,12 @@
 
             <!-- Text -->
             <p class="font-size-lg text-gray-800 mb-6 mb-md-8">
-              Below are our Terms of Service, which outline a lot of legal goodies, but the bottom line is it’s our aim to always take care of both you, as a customer, or as a seller on our platform.
+              Below are our Privacy Policy, which outline a lot of legal goodies, but the bottom line is it’s our aim to always take care of both you, as a customer, or as a seller on our platform.
             </p>
 
             <!-- Heading -->
             <h3 class="mb-5">
-              Licensing Terms
+              Privacy Policy
             </h3>
 
             <!-- Text -->
@@ -842,11 +848,11 @@
 
             <!-- List -->
             <ul class="list-unstyled text-muted mb-6 mb-md-8 mb-lg-0">
-              <!-- <li class="mb-3">
-                <a href="#!" class="text-reset">
-                  Medium
+              <li class="mb-3">
+                <a href="https://www.indiehackers.com/product/minutes-app" class="text-reset">
+                  Indie Hackers
                 </a>
-              </li> -->
+              </li>
               <li class="mb-3">
                 <a href="https://www.sideprojectors.com/project/14189/minutes-app" class="text-reset">
                   Side Projectors
@@ -883,6 +889,11 @@
               <li class="mb-3">
                 <a href="minutes-privacy-policy.html" class="text-reset">
                   Privacy Policy
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="minutes-terms-of-service.html" class="text-reset">
+                  Terms of Usage
                 </a>
               </li>
             </ul>
