--- a/src/.tmp/mobile-app.html
+++ b/src/.tmp/mobile-app.html
@@ -87,6 +87,12 @@
                 Privacy Policy
               </a>
             </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="minutes-terms-of-service.html" id="navbarLandings" aria-haspopup="true" aria-expanded="false">
+                Terms of Usage
+              </a>
+            </li>
             <li class="nav-item dropdown">
               <a href="https://apps.apple.com/us/app/minutes/id1483067743?ls=1">
                 <img src="./assets/img/Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917_web.svg">
@@ -370,11 +376,11 @@
 
             <!-- List -->
             <ul class="list-unstyled text-muted mb-6 mb-md-8 mb-lg-0">
-              <!-- <li class="mb-3">
-                <a href="#!" class="text-reset">
-                  Medium
+              <li class="mb-3">
+                <a href="https://www.indiehackers.com/product/minutes-app" class="text-reset">
+                  Indie Hackers
                 </a>
-              </li> -->
+              </li>
               <li class="mb-3">
                 <a href="https://www.sideprojectors.com/project/14189/minutes-app" class="text-reset">
                   Side Projectors
@@ -411,6 +417,11 @@
               <li class="mb-3">
                 <a href="minutes-privacy-policy.html" class="text-reset">
                   Privacy Policy
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="minutes-terms-of-service.html" class="text-reset">
+                  Terms of Usage
                 </a>
               </li>
             </ul>
