--- a/src/minutes-privacy-policy.html
+++ b/src/minutes-privacy-policy.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     @@include("partials/head.html", {
-      "pageTitle": "Landkit"
+      "pageTitle": "Privacy Policy"
     })
   </head>
   <body class="bg-light">
@@ -54,12 +54,12 @@
 
             <!-- Text -->
             <p class="font-size-lg text-gray-800 mb-6 mb-md-8">
-              Below are our Terms of Service, which outline a lot of legal goodies, but the bottom line is it’s our aim to always take care of both you, as a customer, or as a seller on our platform.
+              Below are our Privacy Policy, which outline a lot of legal goodies, but the bottom line is it’s our aim to always take care of both you, as a customer, or as a seller on our platform.
             </p>
 
             <!-- Heading -->
             <h3 class="mb-5">
-              Licensing Terms
+              Privacy Policy
             </h3>
 
             <!-- Text -->
