--- a/src/.tmp/index.html
+++ b/src/.tmp/index.html
@@ -102,6 +102,12 @@
                 Privacy Policy
               </a>
             </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="minutes-terms-of-service.html" id="navbarLandings" aria-haspopup="true" aria-expanded="false">
+                Terms of Usage
+              </a>
+            </li>
             <li class="nav-item dropdown">
               <a href="https://apps.apple.com/us/app/minutes/id1483067743?ls=1">
                 <img src="./assets/img/Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917_web.svg">
@@ -1083,7 +1089,7 @@
 
                 <!-- Text -->
                 <p class="text-muted mb-6 mb-md-8">
-                  Absolutely. All of your data is being managed by Apple and iCloud using your own credentials, we have no access to your data, only yo can do so
+                  Absolutely. All of your data is being managed by Apple and iCloud using your own credentials, we have no access to your data, only you can do so
                 </p>
 
               </div>
@@ -1289,11 +1295,11 @@
 
             <!-- List -->
             <ul class="list-unstyled text-muted mb-6 mb-md-8 mb-lg-0">
-              <!-- <li class="mb-3">
-                <a href="#!" class="text-reset">
-                  Medium
+              <li class="mb-3">
+                <a href="https://www.indiehackers.com/product/minutes-app" class="text-reset">
+                  Indie Hackers
                 </a>
-              </li> -->
+              </li>
               <li class="mb-3">
                 <a href="https://www.sideprojectors.com/project/14189/minutes-app" class="text-reset">
                   Side Projectors
@@ -1330,6 +1336,11 @@
               <li class="mb-3">
                 <a href="minutes-privacy-policy.html" class="text-reset">
                   Privacy Policy
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="minutes-terms-of-service.html" class="text-reset">
+                  Terms of Usage
                 </a>
               </li>
             </ul>
