--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
       </div> <!-- / .container -->
     </section>
 
-    <section>
+    <!-- <section>
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-12 col-xs-12 text-center" data-aos="fade-up" style="padding-top:25px">
@@ -71,7 +71,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- FEATURES
     ================================================== -->
@@ -210,15 +210,37 @@
           </div>
         </div>
         <div class="row">
+          <div class="col-12 col-md-4 text-center" data-aos="fade-up" data-aos-delay="100">
+            <!-- Icon -->
 
+            <div class="icon text-custom mb-3">
+              @@include("assets/img/icons/duotone-icons/General/Notifications1.svg")
+            </div>
+            <p class="text-custom mb-0">
+              (New feature)
+            </p>
+            <!-- Heading -->
+            <h3>
+              Local notifications on items
+            </h3>
+            <!-- Text -->
+            <p class="text-muted mb-0">
+              Enable local notifications on items with Due Dates, manage it at your own convenience
+            </p>
+          </div>
       </div> <!-- / .container -->
     </section>
 
-    <!-- BRANDS
-    ================================================== -->
-    <!-- <section class="py-6 py-md-8 border-bottom">
+    <!-- Featured ================================================== -->
+     <!-- <section class="py-6 py-md-8 border-bottom">
       <div class="container">
+
         <div class="row align-items-center justify-content-center">
+            <h1> Featured on:</h1> <br />
+        </div>
+        <div class="row align-items-center justify-content-center">
+
+
             <div class="col-6 col-sm-4 col-md-2 mb-4 mb-md-0">
 
 
@@ -271,8 +293,7 @@
       </div>
     </section> -->
 
-    <!-- ABOUT
-    ================================================== -->
+    <!-- ABOUT ================================================== -->
     <section class="pt-8 pt-md-11 bg-gradient-light">
       <div class="container">
         <div class="row align-items-center justify-content-between mb-8 mb-md-11">
