Added: - Testimonials - Sticky navbar

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     @@include("partials/head.html", {
-      "pageTitle": "Minutes App"
+      "pageTitle": "Minutes"
     })
   </head>
   <body>
@@ -33,6 +33,13 @@
     ================================================== -->
     <section class="pt-4 pt-md-11">
       <div class="container">
+        <div class="row">
+          <div class="col-12">
+          </br>
+          </br>
+          </br>
+          </div>
+        </div>
         <div class="row align-items-center">
           <div class="col-12 col-md-5 col-lg-6 order-md-2">
             <!-- Image -->
@@ -41,7 +48,7 @@
           <div class="col-12 col-md-7 col-lg-6 order-md-1" data-aos="fade-up">
             <!-- Heading -->
             <h1 class="display-3 text-center text-md-left">
-              Take back control of your meetings with  <span class="text-custom">Minutes App.</span> <br>
+              Take back control of your meetings with  <span class="text-custom">Minutes.</span> <br>
             </h1>
             <!-- Text -->
             <p class="lead text-center text-md-left text-muted mb-6 mb-lg-8">
@@ -75,7 +82,7 @@
 
     <!-- FEATURES
     ================================================== -->
-    <section class="py-8 py-md-11">
+    <section class="py-8 py-md-11" id="FEATURES">
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-4 text-center" data-aos="fade-up">
@@ -326,7 +333,7 @@
 
             <!-- Text -->
             <p class="font-size-lg text-muted mb-6">
-              Use Minutes App to take back control of your meetings by creating specialized minutes documents with responsibles, due dates and items classifications
+              Use Minutes to take back control of your meetings by creating specialized minutes documents with responsibles, due dates and items classifications
             </p>
 
             <!-- List -->
@@ -513,86 +520,155 @@
 
     <!-- TESTIMONIALS
     ================================================== -->
-    <!-- <section class="pt-10 pt-md-12">
+     <section class="pt-10 pt-md-12">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 col-md-10 col-lg-8 text-center">
             <h2>
-              Our customers are our biggest fans.
+              What our clients says about Minutes
             </h2>
             <p class="font-size-lg text-muted mb-7 mb-md-9">
-              We dont' like to brag, but we don't mind letting our customers do it for us. Here are a few nice things folks have said about our themes over the years.
+              We dont' like to brag, but we don't mind letting our customers do it for us. Here are a few nice things folks have said about Minutes.
             </p>
           </div>
         </div>
-        <div class="row no-gutters position-relative bg-white rounded">
-          <div class="col-12 col-md-6">
-            <div class="d-md-none" data-flickity='{"fade": true, "imagesLoaded": true, "pageDots": false, "prevNextButtons": false, "asNavFor": "#testimonialsCopy", "draggable": false}'>
-              <div class="w-100">
-                <img src="assets/img/photos/photo-1.jpg" class="img-fluid rounded-top d-md-none" alt="...">
+        <div class="row">
+          <div class="col-3 col-sm-0"></div>
+          <div class="col-6 col-sm-12 text-center no-gutters justify-content-center bg-white rounded ">
+          <!-- <div class="row col-6 no-gutters position-relative bg-white rounded "> -->
+
+
+            <!-- <div class="col-12 col-md-6">
+              <div class="d-md-none" data-flickity='{"fade": true, "imagesLoaded": true, "pageDots": false, "prevNextButtons": false, "asNavFor": "#testimonialsCopy", "draggable": false}'>
+                <div class="w-100">
+                  <img src="assets/img/photos/photo-1.jpg" class="img-fluid rounded-top d-md-none" alt="...">
+                </div>
+                <div class="w-100">
+                  <img src="assets/img/photos/photo-26.jpg" class="img-fluid rounded-top d-md-none" alt="...">
+                </div>
               </div>
-              <div class="w-100">
-                <img src="assets/img/photos/photo-26.jpg" class="img-fluid rounded-top d-md-none" alt="...">
-              </div>
-            </div>
-            <div class="h-100 d-none d-md-block" data-flickity='{"fade": true, "imagesLoaded": true, "pageDots": false, "prevNextButtons": false, "asNavFor": "#testimonialsCopy", "draggable": false, "setGallerySize": false}'>
-              <div class="w-100 h-100">
-                <div class="w-100 h-100 bg-cover rounded-left" style="background-image: url(assets/img/photos/photo-1.jpg);">
-                  <div class="shape shape-right shape-fluid-y svg-shim text-white">
-                    @@include("assets/img/shapes/curves/curve-4.svg")
+              <div class="h-100 d-none d-md-block" data-flickity='{"fade": true, "imagesLoaded": true, "pageDots": false, "prevNextButtons": false, "asNavFor": "#testimonialsCopy", "draggable": false, "setGallerySize": false}'>
+                <div class="w-100 h-100">
+                  <div class="w-100 h-100 bg-cover rounded-left" style="background-image: url(assets/img/photos/photo-1.jpg);">
+                    <div class="shape shape-right shape-fluid-y svg-shim text-white">
+                      @@include("assets/img/shapes/curves/curve-4.svg")
+                    </div>
+                  </div>
+                </div>
+                <div class="w-100 h-100">
+                  <div class="w-100 h-100 bg-cover rounded-left" style="background-image: url(assets/img/photos/photo-26.jpg);">
+                    <div class="shape shape-right shape-fluid-y svg-shim text-white">
+                      @@include("assets/img/shapes/curves/curve-4.svg")
+                    </div>
                   </div>
                 </div>
               </div>
-              <div class="w-100 h-100">
-                <div class="w-100 h-100 bg-cover rounded-left" style="background-image: url(assets/img/photos/photo-26.jpg);">
-                  <div class="shape shape-right shape-fluid-y svg-shim text-white">
-                    @@include("assets/img/shapes/curves/curve-4.svg")
-                  </div>
+            </div> -->
+            <div class="col-12 col-md-12 position-static">
+              <div class="position-static" data-flickity='{"wrapAround": true, "pageDots": false, "imagesLoaded": true, "adaptiveHeight": true}' id="testimonialsCopy">
+                <div class="w-100">
+                  <blockquote class="blockquote py-7 py-md-9 px-6 pr-md-9 pl-md-6 mb-0 rounded-right text-center">
+                    <div class="row justify-content-center mb-5 mb-md-7">
+                      <div class="col-6 col-sm-8 col-md-7 col-lg-5">
+                        <div class="img-fluid svg-shim" style="color: #000000;">
+                          <!-- @@include("assets/img/brands/logotype/airbnb.svg") -->
+                          Excellent!
+                          ⭐️⭐️⭐️⭐️⭐️
+                        </div>
+                      </div>
+                    </div>
+                    <p class="mb-5 mb-md-7">
+                      “Very intuitive and easy to use. Super easy to keep track of meetings and making them more productive.”
+                    </p>
+                    <footer class="blockquote-footer">
+                      <span class="h6 text-uppercase">chernand12, 01/09/2020</span>
+                    </footer>
+                  </blockquote>
+                </div>
+                <div class="w-100">
+                  <blockquote class="blockquote py-7 py-md-9 px-6 pr-md-9 pl-md-6 mb-0 rounded-right text-center">
+                    <div class="row justify-content-center mb-5 mb-md-7">
+                      <div class="col-6 col-sm-8 col-md-7 col-lg-5">
+                        <div class="img-fluid svg-shim" style="color: #000000;">
+                          <!-- @@include("assets/img/brands/logotype/airbnb.svg") -->
+                          Cool design!
+                          ⭐️⭐️⭐️⭐️⭐️
+                        </div>
+                      </div>
+                    </div>
+                    <p class="mb-5 mb-md-7">
+                      “I am starting to use this app, and I love the design. It feels fresh and easy to use.”
+                    </p>
+                    <footer class="blockquote-footer">
+                      <span class="h6 text-uppercase">Juandacruser, 01/20/2020</span>
+                    </footer>
+                  </blockquote>
+                </div>
+                <div class="w-100">
+                  <blockquote class="blockquote py-7 py-md-9 px-6 pr-md-9 pl-md-6 mb-0 rounded-right text-center">
+                    <div class="row justify-content-center mb-5 mb-md-7">
+                      <div class="col-6 col-sm-8 col-md-7 col-lg-5">
+                        <div class="img-fluid svg-shim" style="color: #000000;">
+                          <!-- @@include("assets/img/brands/logotype/airbnb.svg") -->
+                          Friendly App
+                          ⭐️⭐️⭐️⭐️⭐️
+                        </div>
+                      </div>
+                    </div>
+                    <p class="mb-5 mb-md-7">
+                      “Excellent app , friendly handling and work awesome , solved an issue in mu day day work”
+                    </p>
+                    <footer class="blockquote-footer">
+                      <span class="h6 text-uppercase">Charlgus, 01/08/2020</span>
+                    </footer>
+                  </blockquote>
+                </div>
+                <div class="w-100">
+                  <blockquote class="blockquote py-7 py-md-9 px-6 pr-md-9 pl-md-6 mb-0 rounded-right text-center">
+                    <div class="row justify-content-center mb-5 mb-md-7">
+                      <div class="col-6 col-sm-8 col-md-7 col-lg-5">
+                        <div class="img-fluid svg-shim" style="color: #000000;">
+                          <!-- @@include("assets/img/brands/logotype/airbnb.svg") -->
+                          Excelente app!
+                          ⭐️⭐️⭐️⭐️⭐️
+                        </div>
+                      </div>
+                    </div>
+                    <p class="mb-5 mb-md-7">
+                      “La app es super útil e intuitiva! 100% recomendada!”
+                    </p>
+                    <footer class="blockquote-footer">
+                      <span class="h6 text-uppercase">orlandopl, 01/09/2020</span>
+                    </footer>
+                  </blockquote>
+                </div>
+                <div class="w-100">
+                  <blockquote class="blockquote py-7 py-md-9 px-6 pr-md-9 pl-md-6 mb-0 rounded-right text-center">
+                    <div class="row justify-content-center mb-5 mb-md-7">
+                      <div class="col-6 col-sm-8 col-md-7 col-lg-5">
+                        <div class="img-fluid svg-shim" style="color: #000000;">
+                          <!-- @@include("assets/img/brands/logotype/airbnb.svg") -->
+                          Excelente App
+                          ⭐️⭐️⭐️⭐️⭐️
+                        </div>
+                      </div>
+                    </div>
+                    <p class="mb-5 mb-md-7">
+                      “Es una herramienta excelente y fácil de usar. Recomendada 100%!”
+                    </p>
+                    <footer class="blockquote-footer">
+                      <span class="h6 text-uppercase">daniizab, 01/15/2020</span>
+                    </footer>
+                  </blockquote>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-6 position-static">
-            <div class="position-static" data-flickity='{"wrapAround": true, "pageDots": false, "imagesLoaded": true, "adaptiveHeight": true}' id="testimonialsCopy">
-              <div class="w-100">
-                <blockquote class="blockquote py-7 py-md-9 px-6 pr-md-9 pl-md-6 mb-0 rounded-right text-center">
-                  <div class="row justify-content-center mb-5 mb-md-7">
-                    <div class="col-6 col-sm-4 col-md-7 col-lg-5">
-                      <div class="img-fluid svg-shim" style="color: #FF5A5F;">
-                        @@include("assets/img/brands/logotype/airbnb.svg")
-                      </div>
-                    </div>
-                  </div>
-                  <p class="mb-5 mb-md-7">
-                    “Landkit is hands down the most useful front end Bootstrap theme I've ever used. I can't wait to use it again for my next project.”
-                  </p>
-                  <footer class="blockquote-footer">
-                    <span class="h6 text-uppercase">Dave Gamache</span>
-                  </footer>
-                </blockquote>
-              </div>
-              <div class="w-100">
-                <blockquote class="blockquote py-7 py-md-9 px-6 pr-md-9 pl-md-6 mb-0 rounded-right text-center">
-                  <div class="row justify-content-center mb-5 mb-md-7">
-                    <div class="col-6 col-sm-4 col-md-7 col-lg-5">
-                      <div class="img-fluid svg-shim" style="color: #3F5D87;">
-                        @@include("assets/img/brands/logotype/instagram.svg")
-                      </div>
-                    </div>
-                  </div>
-                  <p class="mb-5 mb-md-7">
-                    “I've never used a theme as versatile and flexible as Landkit. It's my go to for building landing sites on almost any project.”
-                  </p>
-                  <footer class="blockquote-footer">
-                    <span class="h6 text-uppercase">Russ D'Sa</span>
-                  </footer>
-                </blockquote>
-              </div>
-            </div>
-          </div>
+          <div class="col-3 col-sm-0"></div>
+
         </div>
       </div>
-    </section> -->
+    </section>
 
     <!-- SHAPE
     ================================================== -->
@@ -601,6 +677,9 @@
         @@include("assets/img/shapes/curves/curve-3.svg")
       </div>
     </div>
+
+
+
 
     <!-- STATS
     ================================================== -->
@@ -664,11 +743,10 @@
 
     <!-- PRICING
     ================================================== -->
-    <section class="pt-9 pt-md-12 bg-gray-200">
+    <section class="pt-9 pt-md-12 bg-gray-200" id="PRICING">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 col-md-10 col-lg-8 text-center">
-
             <!-- Heading -->
             <h1>
               Easy, simple pricing for all.
@@ -795,7 +873,7 @@
                 <!-- Price -->
                 <div class="d-flex justify-content-center">
                   <span class="h2 mb-0 mt-2">$</span>
-                  <span class="price display-2 mb-0" data-annual="6.99" data-monthly="7.99">6.99</span>
+                  <span class="price display-2 mb-0" data-annual="6.00" data-monthly="7.99">6.00</span>
                   <span class="h2 align-self-end mb-1">/mo</span>
                 </div>
 
@@ -958,7 +1036,7 @@
 
             <!-- Heading -->
             <h1 class="display-4 text-white">
-              Get Minutes App and save your time.
+              Get Minutes and save your time.
             </h1>
 
             <!-- Text -->
@@ -974,7 +1052,7 @@
 
           </div>
           <div class="col-12 col-md-12 col-xs-12 text-center" data-aos="fade-up" style="padding-top:25px">
-           <a href="https://www.producthunt.com/posts/minutes-app?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-minutes-app" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=178260&theme=light" alt="Minutes App - Take back control of your meetings with Minutes App | Product Hunt Embed" style="width: 250px; height: 54px;" width="250px" height="54px" /></a>
+           <a href="https://www.producthunt.com/posts/minutes-app?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-minutes-app" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=178260&theme=light" alt="Minutes - Take back control of your meetings with Minutes | Product Hunt Embed" style="width: 250px; height: 54px;" width="250px" height="54px" /></a>
           </div>
         </div> <!-- / .row -->
       </div> <!-- / .container -->
