--- a/src/.tmp/enterprise.html
+++ b/src/.tmp/enterprise.html
@@ -39,6 +39,16 @@
     <!-- build:css ./assets/css/theme.min.css -->
     <link rel="stylesheet" href="./assets/css/theme.css">
     <!-- endbuild -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156196757-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-156196757-1');
+    </script>
+
 
     <!-- <title>Landkit</title> -->
     <title>Minutes App</title>
@@ -48,7 +58,7 @@
     
     <!-- NAVBAR
     ================================================== -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-white">
       
 
         <!-- Brand -->
@@ -56,7 +66,7 @@
         <a class="navbar-brand" href="./index.html">
           <img src="./assets/img/minutes/minutes-launch.png" class="navbar-brand-img" alt="Minutes App by Dynamite Apps LLC">
         </a>
-        MINUTES APP</p>
+        MINUTES</p>
 
         <!-- Toggler -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -74,12 +84,12 @@
           <!-- Navigation -->
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#" id="navbarLandings" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link" href="#FEATURES" id="navbarLandings" aria-haspopup="true" aria-expanded="false">
                 Features
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" id="navbarLandings" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link" href="#PRICING" id="navbarLandings" aria-haspopup="true" aria-expanded="false">
                 Pricing
               </a>
             </li>
@@ -1065,7 +1075,7 @@
 
               <!-- Text -->
               <p class="text-gray-700 mb-2">
-                Take back control over your meetings
+                Minutes, Take back control over your meetings
               </p>
 
               <!-- Social -->
