Quick fix on testimonials

--- a/src/index.html
+++ b/src/index.html
@@ -572,7 +572,7 @@
                       <div class="col-6 col-sm-8 col-md-7 col-lg-5">
                         <div class="img-fluid svg-shim" style="color: #000000;">
                           <!-- @@include("assets/img/brands/logotype/airbnb.svg") -->
-                          Excellent!
+                          Excellent!</br>
                           ⭐️⭐️⭐️⭐️⭐️
                         </div>
                       </div>
@@ -591,7 +591,7 @@
                       <div class="col-6 col-sm-8 col-md-7 col-lg-5">
                         <div class="img-fluid svg-shim" style="color: #000000;">
                           <!-- @@include("assets/img/brands/logotype/airbnb.svg") -->
-                          Cool design!
+                          Cool design!</br>
                           ⭐️⭐️⭐️⭐️⭐️
                         </div>
                       </div>
@@ -610,7 +610,7 @@
                       <div class="col-6 col-sm-8 col-md-7 col-lg-5">
                         <div class="img-fluid svg-shim" style="color: #000000;">
                           <!-- @@include("assets/img/brands/logotype/airbnb.svg") -->
-                          Friendly App
+                          Friendly App</br>
                           ⭐️⭐️⭐️⭐️⭐️
                         </div>
                       </div>
@@ -629,7 +629,7 @@
                       <div class="col-6 col-sm-8 col-md-7 col-lg-5">
                         <div class="img-fluid svg-shim" style="color: #000000;">
                           <!-- @@include("assets/img/brands/logotype/airbnb.svg") -->
-                          Excelente app!
+                          Excelente app!</br>
                           ⭐️⭐️⭐️⭐️⭐️
                         </div>
                       </div>
@@ -648,7 +648,7 @@
                       <div class="col-6 col-sm-8 col-md-7 col-lg-5">
                         <div class="img-fluid svg-shim" style="color: #000000;">
                           <!-- @@include("assets/img/brands/logotype/airbnb.svg") -->
-                          Excelente App
+                          Excelente App</br>
                           ⭐️⭐️⭐️⭐️⭐️
                         </div>
                       </div>
