--- a/src/.tmp/pricing.html
+++ b/src/.tmp/pricing.html
@@ -822,11 +822,11 @@
                   <img src="./assets/img/icons/social/twitter.svg" class="list-social-icon" alt="...">
                 </a>
               </li>
-              <!-- <li class="list-inline-item list-social-item">
-                <a href="#!" class="text-decoration-none">
-                  <img src="./assets/img/icons/social/pinterest.svg" class="list-social-icon" alt="...">
+               <li class="list-inline-item list-social-item">
+                <a href="https://www.linkedin.com/showcase/minutes-mobile-app/" class="text-decoration-none">
+                  <img src="./assets/img/icons/social/linkedin-social.svg" class="list-social-icon" alt="...">
                 </a>
-              </li> -->
+              </li>
             </ul>
 
           </div>
