Added new features items for website

--- a/src/index.html
+++ b/src/index.html
@@ -224,7 +224,6 @@
               @@include("assets/img/icons/duotone-icons/General/Notifications1.svg")
             </div>
             <p class="text-custom mb-0">
-              (New feature)
             </p>
             <!-- Heading -->
             <h3>
@@ -233,6 +232,60 @@
             <!-- Text -->
             <p class="text-muted mb-0">
               Enable local notifications on items with Due Dates, manage it at your own convenience
+            </p>
+          </div>
+          <div class="col-12 col-md-4 text-center" data-aos="fade-up" data-aos-delay="100">
+            <!-- Icon -->
+
+            <div class="icon text-custom mb-3">
+              @@include("assets/img/icons/duotone-icons/Navigation/Route.svg")
+            </div>
+            <p class="text-custom mb-0">
+              (New feature)
+            </p>
+            <!-- Heading -->
+            <h3>
+              Document relate and history
+            </h3>
+            <!-- Text -->
+            <p class="text-muted mb-0">
+              Relate your document with previous meetings
+            </p>
+          </div>
+          <div class="col-12 col-md-4 text-center" data-aos="fade-up" data-aos-delay="100">
+            <!-- Icon -->
+
+            <div class="icon text-custom mb-3">
+              @@include("assets/img/icons/duotone-icons/Communication/Group.svg")
+            </div>
+            <p class="text-custom mb-0">
+              (New feature)
+            </p>
+            <!-- Heading -->
+            <h3>
+              Add collaborators
+            </h3>
+            <!-- Text -->
+            <p class="text-muted mb-0">
+              Add collaborators over iCloud to your documents
+            </p>
+          </div>
+          <div class="col-12 col-md-4 text-center" data-aos="fade-up" data-aos-delay="100">
+            <!-- Icon -->
+
+            <div class="icon text-custom mb-3">
+              @@include("assets/img/icons/duotone-icons/Communication/Send.svg")
+            </div>
+            <p class="text-custom mb-0">
+              (New PRO feature)
+            </p>
+            <!-- Heading -->
+            <h3>
+              Email Automation
+            </h3>
+            <!-- Text -->
+            <p class="text-muted mb-0">
+              Send personilized emails with specific tasks to all of your attendees in a single action
             </p>
           </div>
       </div> <!-- / .container -->
