--- a/src/.tmp/index.html
+++ b/src/.tmp/index.html
@@ -422,7 +422,6 @@
               </svg>
             </div>
             <p class="text-custom mb-0">
-              (New feature)
             </p>
             <!-- Heading -->
             <h3>
@@ -431,6 +430,90 @@
             <!-- Text -->
             <p class="text-muted mb-0">
               Enable local notifications on items with Due Dates, manage it at your own convenience
+            </p>
+          </div>
+          <div class="col-12 col-md-4 text-center" data-aos="fade-up" data-aos-delay="100">
+            <!-- Icon -->
+
+            <div class="icon text-custom mb-3">
+              <?xml version="1.0" encoding="UTF-8"?>
+              <svg width="24px" height="24px" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                  <!-- Generator: Sketch 52.2 (67145) - http://www.bohemiancoding.com/sketch -->
+                  <title>Stockholm-icons / Navigation / Route</title>
+                  <desc>Created with Sketch.</desc>
+                  <g id="Stockholm-icons-/-Navigation-/-Route" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                      <polygon id="Shape" points="0 0 24 0 24 24 0 24"></polygon>
+                      <path d="M8,7 C7.44771525,7 7,6.55228475 7,6 C7,5.44771525 7.44771525,5 8,5 L16,5 C18.209139,5 20,6.790861 20,9 C20,11.209139 18.209139,13 16,13 L8,13 C6.8954305,13 6,13.8954305 6,15 C6,16.1045695 6.8954305,17 8,17 L17,17 C17.5522847,17 18,17.4477153 18,18 C18,18.5522847 17.5522847,19 17,19 L8,19 C5.790861,19 4,17.209139 4,15 C4,12.790861 5.790861,11 8,11 L16,11 C17.1045695,11 18,10.1045695 18,9 C18,7.8954305 17.1045695,7 16,7 L8,7 Z" id="Path-110" fill="#335EEA" opacity="0.3"></path>
+                      <path d="M9.79289322,3.79289322 C10.1834175,3.40236893 10.8165825,3.40236893 11.2071068,3.79289322 C11.5976311,4.18341751 11.5976311,4.81658249 11.2071068,5.20710678 L8.20710678,8.20710678 C7.81658249,8.59763107 7.18341751,8.59763107 6.79289322,8.20710678 L3.79289322,5.20710678 C3.40236893,4.81658249 3.40236893,4.18341751 3.79289322,3.79289322 C4.18341751,3.40236893 4.81658249,3.40236893 5.20710678,3.79289322 L7.5,6.08578644 L9.79289322,3.79289322 Z" id="Path-104" fill="#335EEA" transform="translate(7.500000, 6.000000) rotate(-270.000000) translate(-7.500000, -6.000000) "></path>
+                      <path d="M18.7928932,15.7928932 C19.1834175,15.4023689 19.8165825,15.4023689 20.2071068,15.7928932 C20.5976311,16.1834175 20.5976311,16.8165825 20.2071068,17.2071068 L17.2071068,20.2071068 C16.8165825,20.5976311 16.1834175,20.5976311 15.7928932,20.2071068 L12.7928932,17.2071068 C12.4023689,16.8165825 12.4023689,16.1834175 12.7928932,15.7928932 C13.1834175,15.4023689 13.8165825,15.4023689 14.2071068,15.7928932 L16.5,18.0857864 L18.7928932,15.7928932 Z" id="Path-104-Copy" fill="#335EEA" transform="translate(16.500000, 18.000000) scale(1, -1) rotate(270.000000) translate(-16.500000, -18.000000) "></path>
+                  </g>
+              </svg>
+            </div>
+            <p class="text-custom mb-0">
+              (New feature)
+            </p>
+            <!-- Heading -->
+            <h3>
+              Document relate and history
+            </h3>
+            <!-- Text -->
+            <p class="text-muted mb-0">
+              Relate your document with previous meetings
+            </p>
+          </div>
+          <div class="col-12 col-md-4 text-center" data-aos="fade-up" data-aos-delay="100">
+            <!-- Icon -->
+
+            <div class="icon text-custom mb-3">
+              <?xml version="1.0" encoding="UTF-8"?>
+              <svg width="24px" height="24px" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                  <!-- Generator: Sketch 52.2 (67145) - http://www.bohemiancoding.com/sketch -->
+                  <title>Stockholm-icons / Communication / Group</title>
+                  <desc>Created with Sketch.</desc>
+                  <g id="Stockholm-icons-/-Communication-/-Group" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                      <polygon id="Shape" points="0 0 24 0 24 24 0 24"></polygon>
+                      <path d="M18,14 C16.3431458,14 15,12.6568542 15,11 C15,9.34314575 16.3431458,8 18,8 C19.6568542,8 21,9.34314575 21,11 C21,12.6568542 19.6568542,14 18,14 Z M9,11 C6.790861,11 5,9.209139 5,7 C5,4.790861 6.790861,3 9,3 C11.209139,3 13,4.790861 13,7 C13,9.209139 11.209139,11 9,11 Z" id="Combined-Shape" fill="#335EEA" opacity="0.3"></path>
+                      <path d="M17.6011961,15.0006174 C21.0077043,15.0378534 23.7891749,16.7601418 23.9984937,20.4 C24.0069246,20.5466056 23.9984937,21 23.4559499,21 L19.6,21 C19.6,18.7490654 18.8562935,16.6718327 17.6011961,15.0006174 Z M0.00065168429,20.1992055 C0.388258525,15.4265159 4.26191235,13 8.98334134,13 C13.7712164,13 17.7048837,15.2931929 17.9979143,20.2 C18.0095879,20.3954741 17.9979143,21 17.2466999,21 C13.541124,21 8.03472472,21 0.727502227,21 C0.476712155,21 -0.0204617505,20.45918 0.00065168429,20.1992055 Z" id="Combined-Shape" fill="#335EEA"></path>
+                  </g>
+              </svg>
+            </div>
+            <p class="text-custom mb-0">
+              (New feature)
+            </p>
+            <!-- Heading -->
+            <h3>
+              Add collaborators
+            </h3>
+            <!-- Text -->
+            <p class="text-muted mb-0">
+              Add collaborators over iCloud to your documents
+            </p>
+          </div>
+          <div class="col-12 col-md-4 text-center" data-aos="fade-up" data-aos-delay="100">
+            <!-- Icon -->
+
+            <div class="icon text-custom mb-3">
+              <?xml version="1.0" encoding="UTF-8"?>
+              <svg width="24px" height="24px" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                  <!-- Generator: Sketch 52.2 (67145) - http://www.bohemiancoding.com/sketch -->
+                  <title>Stockholm-icons / Communication / Send</title>
+                  <desc>Created with Sketch.</desc>
+                  <g id="Stockholm-icons-/-Communication-/-Send" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                      <rect id="bound" x="0" y="0" width="24" height="24"></rect>
+                      <path d="M3,13.5 L19,12 L3,10.5 L3,3.7732928 C3,3.70255344 3.01501031,3.63261921 3.04403925,3.56811047 C3.15735832,3.3162903 3.45336217,3.20401298 3.70518234,3.31733205 L21.9867539,11.5440392 C22.098181,11.5941815 22.1873901,11.6833905 22.2375323,11.7948177 C22.3508514,12.0466378 22.2385741,12.3426417 21.9867539,12.4559608 L3.70518234,20.6826679 C3.64067359,20.7116969 3.57073936,20.7267072 3.5,20.7267072 C3.22385763,20.7267072 3,20.5028496 3,20.2267072 L3,13.5 Z" id="Combined-Shape" fill="#335EEA"></path>
+                  </g>
+              </svg>
+            </div>
+            <p class="text-custom mb-0">
+              (New PRO feature)
+            </p>
+            <!-- Heading -->
+            <h3>
+              Email Automation
+            </h3>
+            <!-- Text -->
+            <p class="text-muted mb-0">
+              Send personilized emails with specific tasks to all of your attendees in a single action
             </p>
           </div>
       </div> <!-- / .container -->
@@ -1069,7 +1152,7 @@
 
                         <!-- Text -->
                         <p>
-                          Up to 30 meeting minutes documents
+                          Up to 45 meeting minutes documents
                         </p>
 
                       </div>
@@ -1082,7 +1165,7 @@
 
                         <!-- Text -->
                         <p>
-                          Up to 12 items per document
+                          Up to 18 items per document
                         </p>
 
                       </div>
